# internal/infra/boundaries/http/swagger/swagger.json
@@ -349,11 +349,27 @@
                     "rooms"
                 ],
                 "summary": "Create a new room",
+                "parameters": [
+                    {
+                        "description": "Room options",
+                        "name": "request",
+                        "in": "body",
+                        "schema": {
+                            "$ref": "#/definitions/http.CreateRoomRequest"
+                        }
+                    }
+                ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Created",
                         "schema": {
                             "$ref": "#/definitions/http.CreateRoomResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/http.ErrorResponse"
                         }
                     },
                     "500": {
@@ -393,6 +409,14 @@
         }
     },
     "definitions": {
+        "http.CreateRoomRequest": {
+            "type": "object",
+            "properties": {
+                "deckPreset": {
+                    "type": "string"
+                }
+            }
+        },
         "http.CreateRoomResponse": {
             "type": "object",
             "properties": {
